--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:server": "tsc --project tsconfig.server.json",
     "build:next": "next build",
     "build": "npm run build:next && npm run build:server",
-    "start": "NODE_ENV=production node dist/server.js"
+    "start": "NODE_ENV=production node dist/server.js",
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -35,9 +36,15 @@
     "remark-html": "^13.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.30",
+    "babel-jest": "^27.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.3.1",
+    "react-test-renderer": "^17.0.2",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   }
