--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^2.0.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.5",
     "react-icons": "^4.3.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.2"
