--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "start": "NODE_ENV=production node dist/server.js",
     "test": "jest --watch"
   },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "../node_modules/jest-enzyme/lib/index.js"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,6 +27,7 @@
     "@hookform/resolvers": "^2.8.3",
     "@types/axios": "^0.14.0",
     "@types/morgan": "^1.9.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "axios": "^0.23.0",
     "date-fns": "^2.25.0",
     "express": "^4.17.1",
@@ -47,6 +53,8 @@
     "babel-jest": "^27.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
+    "jsdom": "18.1.1",
+    "jsdom-global": "3.0.2",
     "react-test-renderer": "^17.0.2",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
